# Platformer-Maker

./: CMakeLists.txt  main.cpp
Headers/: InputManager.h  Player.h  Renderer.h  Tile.h  Vector.h  config.h
src/: InputManager.cpp  Player.cpp  Renderer.cpp  Tile.cpp  main.cpp  textFile.txt  texture_creater.cpp
